-------------------------------------------------------
==07/06/2009==
KLS: Reworked EVENT_ATTACK to be more efficient.
KLS: Reworked EVENT_COMBAT to be both more efficient and smoother, no longer having an arbitrary delay before it fires.
KLS: Took out code in HateList::IsEmpty() that no longer makes any sense to me, it should be noticably faster.
KLS: Took out old unused quest::flagnpc stuff.

==07/05/2009==
gaeorn: (drakelord) Added slow migitation. Set npc_types.slow_mitigation with the portion of slow you want mitigated: 0 = 0%, 1 = 100%, .5 = 50%, etc.
AndMetal: AAs are now calculated in CalcBonuses for clients.
          AAs that have been converted: (Advanced) Innate STR / STA / AGI / DEX / INT / WIS / CHA, Innate Enlightenment, Natural Durability, Physical Enhancement, Planar Durability, Packrat. They should already be in the PEQ aa_effects table.
          For new AAs, you'll want to modify the StatBonuses struct in zone/mob.h. You'll also need to add a case in ApplyAABonuses in zone/bonuses.cpp to add it to aabonuses.
AndMetal: (via Congdar) Fix for quest::traindiscs().
AndMetal: Fixed Packrat. However, it doesn't seem to be updating correctly to the client (or we're taking too much off).
AndMetal: Added weight to #showstats, accurate to 1 decimal point.
KLS: NPCs will no longer try to base their attack speed off weapons they're using, the code wasn't working anyway.
KLS: Lowered monk kick damage and damage table bonuses but added rules to govern this damage so they can be boosted up for any servers that want.
KLS: More work on ranged damage for npcs, not yet fully implemented but quest functions can cause NPCs to ranged attack.
KLS: Added quest::IsEffectInSpell(spell_id, effect_id), quest::IsBeneficialSpell(spell_id), quest::GetSpellResistType(spell_id), quest::GetSpellTargetType(spell_id)

Required SQL:

utils/sql/svn/745_slow_mitigation.sql


==07/03/2009==
KLS: Fix for AA reuse timer text.