@@ -28,6 +28,11 @@ public:
 	virtual bool CheckState(EQStreamState state);
 	virtual std::string Describe() const;
 	
+	virtual const int32 GetBytesSent() const;
+	virtual const int32 GetBytesRecieved() const;
+	virtual const int32 GetBytesSentPerSecond() const;
+	virtual const int32 GetBytesRecvPerSecond() const;
+
 protected:
 	EQStream *const 				m_stream;	//we own this stream object.
 	const StructStrategy *const		m_structs;	//we do not own this object.
